--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-Django==1.10.5
-django-cors-middleware==1.3.1
-django-extensions==1.7.1
-djangorestframework==3.4.4
-PyJWT==1.4.2
-six==1.10.0
+Django==5.2.2
+django-cors-headers==4.7.0
+django-extensions==4.1
+djangorestframework==3.16.0
+PyJWT==2.10.1
+six==1.17.0
+whitenoise==6.9.0
+gunicorn==23.0.0
